--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         </div>
         <button id="next-btn">Next</button>
     </div>
+    <div class="name">Made by- Vaibhav Kothari</div>
 </div>
     <script src="script.js"></script>
 </body>
