--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trivia-Quiz</title>
-    <link rel="stylesheet" href="style.css">
+    <style>
+    .name{
+  padding-top: 30px;
+  padding-left: 80px;
+  font-weight: 600;
+  font-style: initial;
+}
+    </style>
+        <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
